@startuml
left to right direction

class BusinessCardDesigner {
    + String designCard(Customer customer)
}



note left
public static void main(String[] args) {
		/** Using Class/Two-way adapter **/
		EmployeeClassAdapter adapter = new EmployeeClassAdapter();
		populateEmployeeData(adapter);
		BusinessCardDesigner designer = new BusinessCardDesigner();
		String card = designer.designCard(adapter);

		System.out.println(card);


		System.out.println("******************");

		Employee employee = new Employee();
		populateEmployeeData(employee);
		EmployeeObjectAdapter objectAdapter = new EmployeeObjectAdapter(employee);
		String objectCard = designer.designCard(objectAdapter);
		System.out.println(objectCard);

	}

	private static void populateEmployeeData(Employee employee) {
		employee.setFullName("Elliot Alderson");
		employee.setJobTitle("Security Engineer");
		employee.setOfficeLocation("Allsafe Cybersecurity, New York City, New York");
	}
endnote

interface Customer {
    + operation() : void
}

class EmployeeAdapter {
    + operation() : void
}
note right
Operation
adaptee.myOperation()
endnote

class Employee {
    + myOperation() : void
}

BusinessCardDesigner --> Customer
EmployeeAdapter ..|> Customer
EmployeeAdapter *--> Employee

@enduml
